kafka-demo-generator.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: flink-demo-generator
spec:
  replicas: 1
  template:
    metadata:
      name: flink-demo-generator
      labels:
        app: flink-demo-generator
    spec:
      containers:
      - name: flink-demo-generator
        image: mesosphere/flink-generator:0.1
        command: ["/generator-linux"]
        imagePullPolicy: Always
        args: ["--broker", "broker.testkafka.l4lb.thisdcos.directory:9092"]
