flask-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
spec:
  selector:
    app: flask
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: flask-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: flask-svc
          servicePort: 80
